syntax = "proto3";

package pb;

option go_package = "internal/infrastructure/pb";

import "proto/patient.proto";
import "proto/utils.proto";

message Caregiver {
  uint64 id = 1;
  string name = 2;
  pb.Date birthdate = 3;
  string avatar = 4;
  pb.Sex sex = 5;
  string status = 6;
  string email = 7;
}

message CaregiverFull {
  uint64 id = 1;
  string name = 2;
  pb.Date birthdate = 3;
  string avatar = 4;
  pb.Sex sex = 5;
  string status = 6;
  pb.Patient patient = 7;
  string email = 8;
}

message CreateCaregiverRequest {
  string name = 1;
  pb.Date birthdate = 2;
  optional string avatar = 3;
  pb.Sex sex = 4;
  string email = 5;
}

message UpdateCaregiverRequest {
  string name = 1;
  pb.Date birthdate = 2;
  string avatar = 3;
  pb.Sex sex = 4;
  string email = 5;
  uint64 caregiver_id = 6;
}

message FindCaregiverByIDRequest {
  uint64 id = 1;
}

message DeleteCaregiverRequest {
  uint64 id = 1;
}

message AddPatientRequest {
  uint64 caregiver_id = 1;
  uint64 patient_id = 2;
}

message LinkPatientDeviceRequest {
  string patient_session_token = 1;
}

service CaregiverService {
  rpc Create(CreateCaregiverRequest) returns (Caregiver);
  rpc FindById(FindCaregiverByIDRequest) returns (CaregiverFull);
  rpc Update(UpdateCaregiverRequest) returns (pb.Blank);
  rpc Delete(DeleteCaregiverRequest) returns (pb.Blank);
  rpc AddNewPatient(AddPatientRequest) returns (CaregiverFull);
  rpc LinkPatientDevice(LinkPatientDeviceRequest) returns (pb.Blank);
}